one line change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="css/style.css">
 <style>
     body {
-        color: white;
+/*         color: white; */
         font-family: 'Oleo Script', cursive;
         padding: 0px;
         margin: 0px;
